# Thesis_Chatbot

./: README.md  pyproject.toml  streamlit_app.py
embeddings/: gemini.py  mother.py
rag/: __init__.py  exceptions.py
rag/embeddings/: gemini.py  openai.py
rag/llm/: langchain.py
rag/vdb/: doc.py
