[tool.poetry]
name = "thesis-rag"
version = "0.1.0"
description = ""
authors = ["hundredeuk <leehd1995@gmail.com>"]
readme = "README.md"
packages = [{include = "thesis_rag"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
